--- a/Project Description/Latex/Klingon Morphological Analyzer - Project Description - Matthew Thomas.tex
+++ b/Project Description/Latex/Klingon Morphological Analyzer - Project Description - Matthew Thomas.tex
@@ -58,7 +58,7 @@ The number of fluent Klingon speakers is not known, but has been estimated betwe
 
 \section{Klingon Morphology}
 
-Klingon is an agglutinative language that uses Object-Verb-Subject word order. Okrand categorizes all Klingon words into Nouns, Verbs, and Other.
+Klingon is an agglutinative language that uses Object-Verb-Subject word order. Okrand categorizes all Klingon words into Nouns, Verbs, and Other. The morphological analyzer is designed and tested to work with Nouns and Verbs, however some additional work was done to account for the words in the 'Other' category.
 
 \subsection {Nouns}
 
@@ -84,32 +84,39 @@ Below are the noun suffix types and the relevant rules for each type.
 
 	The \textit{-mey} suffix may also be used with body-part and beings-capable-of-language nouns, but the resulting word acquires an additional meaning ``\textit{all over the place}'' on top of the plural meaning.
 	
-\begin{table}[h]
-\begin{center}
-\begin{tabular}{l|l}
-\bf Klingon & \bf English \\
-jup & friend \\
-jupDu' & friends \\
-jupmey & friends all over the place \\
-\end{tabular}
-\end{center}
-\caption{Generic Plural Suffix Usage with Inherently Singular Nouns}
-\end{table}
+	\begin{table}[h]
+	\begin{center}
+	\begin{tabular}{lll}
+	\toprule
+	\bf Klingon & \bf English \\
+	\midrule
+	jup & friend \\
+	jupDu' & friends \\
+	jupmey & friends all over the place \\
+	\bottomrule
+	\end{tabular}
+	\end{center}
+	\caption{Generic Plural Suffix Usage with Inherently Singular Nouns}
+	\end{table}
 
 	Some nouns are inherently singular or inherently plural. For example the Klingon word \textit{peng} means torpedo (singular) but \textit{cha} means torpedos (plural). The singular forms of these types of nouns may also take the \textit{-mey} generic plural suffix, but the resulting word also acquires the ``\textit{all over the place}'' meaning.
 	
+	
 	\begin{table}[h]
-\begin{center}
-\begin{tabular}{l|l}
-\bf Klingon & \bf English \\
-peng & torpedo \\
-pengmey & torpedos all over the place \\
-cha & torpedos \\
-**chamey & \it Not allowed \\
-\end{tabular}
-\end{center}
-\caption{Generic Plural Suffix Usage with Language-Capable Nouns}
-\end{table}
+	\begin{center}
+	\begin{tabular}{lll}
+	\toprule
+	\bf Klingon & \bf English \\
+	\midrule
+	peng & torpedo \\
+	pengmey & torpedos all over the place \\
+	cha & torpedos \\
+	**chamey & \it Not allowed \\
+	\bottomrule
+	\end{tabular}
+	\end{center}
+	\caption{Generic Plural Suffix Usage with Language-Capable Nouns}
+	\end{table}
 
 	Lastly, nouns in Klingon are not required to take any plural suffix in order to be plural. The singular form of a noun may be used where the plural form would normally be used, and this is perfectly grammatically correct. The meaning is disambiguated using the context of the word in the sentence. Therefore \textit{jup} means both ``friend'' and ``friends'' depending on the context. There are no articles in Klingon.
 	
@@ -121,17 +128,18 @@ cha & torpedos \\
 	Possession suffixes are selected depending on whether the \textit{object} being referred to is language-capable.
 
 	\begin{center}
-	\begin{tabular}{ | l | l | l | l |}
-	\hline
+	\begin{tabular}{lll}
+	\toprule
 	\bf{Possessive} & \bf{Generic} & \bf{Language} \\
-	\bf{Suffixes} & & \bf{Capable} \\ \hline
+	\bf{Suffixes} & & \bf{Capable} \\
+	\midrule
 	my & -wIj & -wI' \\ \hline
 	your & -lIj & -lI' \\ \hline
 	his, her, its & -Daj & \textcolor{gray}{-Daj} \\ \hline
 	our & -maj & -ma' \\ \hline
 	your (plural) & -raj & -ra' \\ \hline
 	their & -chaj & \textcolor{gray}{-chaj} \\
-	\hline
+	\bottomrule
 	\end{tabular}
 	\end{center}
 	
@@ -167,20 +175,23 @@ Below are the verb suffix types and the relevant rules and flag diacritics for e
 
 In addition, a ``rover'' suffix type can be appended immediately after the verb stem or between the nine suffix types, however rover suffixes cannot be appended after a Type-9 suffix. There are no restrictions on the number of rover suffixes that may be used. A rover suffix's meaning applies to the suffix immediately proceeding it. For example the \textbf{negating} rover suffix \textit{be'} can be appended immediately after the verb stem and/or after any other suffix type.
 
-\begin{table}[h]
-\begin{center}
-\begin{tabular}{l|l}
-\bf Klingon & \bf English \\
-Dub & to improve \\
-Dubbe' & to not improve \\
-DubmoH & to cause to improve \\
-DubmoHbe' & to not cause to improve \\
-Dubbe'moH & to cause to not improve \\
-Dubbe'moHbe' & to not cause to not improve
-\end{tabular}
-\end{center}
-\caption{Verb Rover Suffix Usage }
-\end{table}
+	\begin{table}[h]
+	\begin{center}
+	\begin{tabular}{lll}
+	\toprule
+	\bf Klingon & \bf English \\
+	\midrule
+	Dub & to improve \\
+	Dubbe' & to not improve \\
+	DubmoH & to cause to improve \\
+	DubmoHbe' & to not cause to improve \\
+	Dubbe'moH & to cause to not improve \\
+	Dubbe'moHbe' & to not cause to not improve \\
+	\bottomrule
+	\end{tabular}
+	\end{center}
+	\caption{Generic Plural Suffix Usage with Language-Capable Nouns}
+	\end{table}
 
 Rover suffixes can even be appended after other rover suffixes, e.g. \textit{Dubbe'be'} meaning \textit{to not not improve}.
 
@@ -204,17 +215,19 @@ Questions
 
 Klingon completely lacks morphophonology with one exception. The endearment noun suffix \textit{-oy} is prepended with a glottal stop \textit{'} if the noun stem ends with a vowel.
 
-\begin{table}[h]
-\begin{center}
-\begin{tabular}{|l|l|}
-\hline \bf Noun Stem & \bf With Endearment Suffix \\ \hline
-jup (friend) & jupoy (dear friend) \\
-cha (torpedo) & cha'oy (dear torpedo) \\
-\hline
-\end{tabular}
-\end{center}
-\caption{Endearment Suffix }
-\end{table}
+	\begin{table}[h]
+	\begin{center}
+	\begin{tabular}{lll}
+	\toprule
+	\bf Noun Stem & \bf With Endearment Suffix \\
+	\midrule
+	jup (friend) & jupoy (dear friend) \\
+	cha (torpedo) & cha'oy (dear torpedo) \\
+	\bottomrule
+	\end{tabular}
+	\end{center}
+	\caption{Endearment Suffix}
+	\end{table}
 
 \section{FST Implementation}
 
